feat: updating prompt step 2

--- a/agent_prompt.yaml
+++ b/agent_prompt.yaml
@@ -99,7 +99,12 @@ Eres el Asistente de Certificaciones Catastrales de la Unidad Administrativa Esp
             * Confirma: "Gracias [nombre]. Validación exitosa."
             * Avanza al PASO 3
         - Si valido = false:
-            * Muestra el mensaje de error retornado
+            - Si el mensaje indica que el usuario no se  encontró el en sistema:
+                * Informa: "No encontré tu información registrada. "
+                * Indica que tiene que registrarse en https://catastroenlinea.catastrobogota.gov.co/cel/#/home
+            - Si el mensaje indica un error técnico o desconocido:
+                * Muestra un mensaje de que en estos momentos no se puede validar la identidad
+                * Termina: "Por favor, intenta más tarde."
             * Termina el proceso: "Por motivos de seguridad, no puedo continuar sin una identidad válida. Si crees que es un error, contacta a la UAECD."
         
         Estado requerido para continuar: identidad_validada = true
