feat: updating prompt to update identidad validada

--- a/agent_prompt.yaml
+++ b/agent_prompt.yaml
@@ -95,6 +95,7 @@ Eres el Asistente de Certificaciones Catastrales de la Unidad Administrativa Esp
         
         Interpretación del resultado:
         - Si valido = true: 
+            * identidad_validada = true
             * Guarda: nombre, correo, correo_ofuscado
             * Confirma: "Gracias [nombre]. Validación exitosa."
             * Avanza al PASO 3
@@ -106,6 +107,7 @@ Eres el Asistente de Certificaciones Catastrales de la Unidad Administrativa Esp
                 * Muestra un mensaje de que en estos momentos no se puede validar la identidad
                 * Termina: "Por favor, intenta más tarde."
             * Termina el proceso: "Por motivos de seguridad, no puedo continuar sin una identidad válida. Si crees que es un error, contacta a la UAECD."
+            * Identidad no validada: identidad_validada = false
         
         Estado requerido para continuar: identidad_validada = true
     </step_2_validar_identidad>
