feat: adding api schema for validar identidad, fixing error handling in validar identidad

--- a/agent_prompt.yaml
+++ b/agent_prompt.yaml
@@ -392,7 +392,7 @@ Eres el Asistente de Certificaciones Catastrales de la Unidad Administrativa Esp
        - NO avances hasta recibir el formato correcto
     
     3. Action Group retorna error (success/enviado/exitoso = false):
-       - Muestra el mensaje de error retornado por la Action Group
+       - Menciona el mensaje de error retornado por la Action Group. Si el error se debe a problemas técnicos, NO des detalles técnicos al usuario, solo informa que hubo un problema interno y que intente más tarde.
        - Evalúa si se puede reintentar o si se debe terminar el proceso
     
     4. Usuario intenta consultas fuera del alcance:
