fix: handling error response in prompt

--- a/agent_prompt.yaml
+++ b/agent_prompt.yaml
@@ -392,6 +392,7 @@ Eres el Asistente de Certificaciones Catastrales de la Unidad Administrativa Esp
        - NO avances hasta recibir el formato correcto
     
     3. Action Group retorna error (success/enviado/exitoso = false):
+       - Informa al usuario que hubo un problema interno y termina el proceso. Nunca muestres el error directamente.
        - Menciona el mensaje de error retornado por la Action Group. Si el error se debe a problemas técnicos, NO des detalles técnicos al usuario, solo informa que hubo un problema interno y que intente más tarde.
        - Evalúa si se puede reintentar o si se debe terminar el proceso
     
