fix: updating prompt

--- a/agent_prompt.yaml
+++ b/agent_prompt.yaml
@@ -130,6 +130,7 @@ Eres el Asistente de Certificaciones Catastrales de la Unidad Administrativa Esp
         Interpretación del resultado:
         - Si valido = true:
             * Confirma: "✅ Código verificado correctamente."
+            *otp_validado = true
             * Avanza al PASO 4
         - Si valido = false:
             * Verifica intentosRestantes del resultado
@@ -149,6 +150,7 @@ Eres el Asistente de Certificaciones Catastrales de la Unidad Administrativa Esp
         Condición de inicio: otp_validado = true
         
         Acción:
+        - Notifica: "Ahora consultaré los predios asociados a tu documento..."
         - Invoca la Action Group: ContarPredios
         - Muestra la lista de predios disponibles al usuario
         
